--- a/conf/linked.data.gov.au/org/abs.conf
+++ b/conf/linked.data.gov.au/org/abs.conf
@@ -1,62 +1,24 @@
 # https://linked.data.gov.au/dataset/asgs2011
 RewriteRule ^/dataset/asgs2011(.*)                        https://linked.data.gov.au/static/broken.html\?iri=https://linked.data.gov.au/dataset/asgs2011$1 [L]
-# # Dataset
-# RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/dataset/asgs2011$                         http://asgsld.net/2011/index.ttl? [R=302,L]
-# RewriteRule ^/dataset/asgs2011.ttl$                     http://asgsld.net/2011/index.ttl [R=302,L]
-# RewriteRule ^/dataset/asgs2011$                         http://asgsld.net/2011  [R=302,L]
-# # Top-level Registers
-# RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/dataset/asgs2011/(.*)/$                   http://asgsld.net/2011/$1/?_format=text/turtle [R=302,L]
-# RewriteRule ^/dataset/asgs2011/(.*)/index.ttl$          http://asgsld.net/2011/$1/?_format=text/turtle [R=302,L]
-# RewriteRule ^/dataset/asgs2011/(.*)/$                   http://asgsld.net/2011/$1/ [R=302,L]
-# # sub-dataset objects
-# RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/dataset/asgs2011/(.*)$                    http://asgsld.net/2011/$1?_format=text/turtle [R=302,L]
-# RewriteRule ^/dataset/asgs2011/(.*).ttl$                http://asgsld.net/2011/$1?_format=text/turtle [R=302,L]
-# RewriteRule ^/dataset/asgs2011/(.*)$                    http://asgsld.net/2011/$1 [R=302,L]
-
 
 # https://linked.data.gov.au/dataset/asgs2016
 RewriteRule ^/dataset/asgs2016(.*)                        https://linked.data.gov.au/static/broken.html\?iri=https://linked.data.gov.au/dataset/asgs2016$1 [L]
-# Dataset
-# RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/dataset/asgs2016$                         http://asgsld.net/2016/index.ttl? [R=302,L]
-# RewriteRule ^/dataset/asgs2016.ttl$                     http://asgsld.net/2016/index.ttl [R=302,L]
-# RewriteRule ^/dataset/asgs2016$                         http://asgsld.net/2016  [R=302,L]
-# # Top-level Registers
-# RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/dataset/asgs2016/(.*)/$                   http://asgsld.net/2016/$1/?_format=text/turtle [R=302,L]
-# RewriteRule ^/dataset/asgs2016/(.*)/index.ttl$          http://asgsld.net/2016/$1/?_format=text/turtle [R=302,L]
-# RewriteRule ^/dataset/asgs2016/(.*)/$                   http://asgsld.net/2016/$1/ [R=302,L]
-# # sub-dataset objects
-# RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-# RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/dataset/asgs2016/(.*)$                    http://asgsld.net/2016/$1?_format=text/turtle [R=302,L]
-# RewriteRule ^/dataset/asgs2016/(.*).ttl$                http://asgsld.net/2016/$1?_format=text/turtle [R=302,L]
-# RewriteRule ^/dataset/asgs2016/(.*)$                    http://asgsld.net/2016/$1 [R=302,L]
-
 
 # https://linked.data.gov.au/dataset/asgsed3
 # Dataset
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/dataset/asgsed3$                          https://asgs.linked.fsdf.org.au/dataset/asgsed3?_profile=dcat&_mediatype=text/turtle [R=302,L]
 RewriteRule ^/dataset/asgsed3.ttl$                      https://asgs.linked.fsdf.org.au/dataset/asgsed3?_profile=dcat&_mediatype=text/turtle [R=302,L]
 RewriteRule ^/dataset/asgsed3$                          https://asgs.linked.fsdf.org.au/dataset/asgsed3 [R=302,L]
 # Feature Collections
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/dataset/asgsed3/([A-Z0-9]+)$              https://asgs.linked.fsdf.org.au/dataset/asgsed3/collections/$1?_profile=geo&_mediatype=text/turtle [R=302,L]
 RewriteRule ^/dataset/asgsed3/([A-Z0-9]+).ttl$          https://asgs.linked.fsdf.org.au/dataset/asgsed3/collections/$1?_profile=geo&_mediatype=text/turtle [R=302,L]
 RewriteRule ^/dataset/asgsed3/([A-Z0-9]+)$              https://asgs.linked.fsdf.org.au/dataset/asgsed3/collections/$1 [R=302,L]
 # Features
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/dataset/asgsed3/(.*)/(.*)$                https://asgs.linked.fsdf.org.au/dataset/asgsed3/collections/$1/items/$2?_profile=geo&mediatype=text/turtle [R=302,L]
 RewriteRule ^/dataset/asgsed3/(.*)/(.*).ttl$            https://asgs.linked.fsdf.org.au/dataset/asgsed3/collections/$1/items/$2?_profile=geo&mediatype=text/turtle [R=302,L]
@@ -64,7 +26,7 @@ RewriteRule ^/dataset/asgsed3/(.*)/(.*)$                https://asgs.linked.fsdf
 
 
 # https://linked.data.gov.au/def/asgs
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/asgs                                  https://raw.githack.com/AGLDWG/asgs-ont/master/asgs.ttl? [R=302,L]
 RewriteRule ^/def/asgs(.*).ttl$                         https://raw.githack.com/AGLDWG/asgs-ont/master/asgs.ttl [R=302,L]
@@ -80,11 +42,11 @@ RewriteRule ^/def/asgs/path                             https://raw.githack.com/
 RewriteRule ^/def/asgs/path(.*).ttl$                    https://raw.githack.com/AGLDWG/asgs-ont/master/asgs-path.ttl [R=302,L]
 RewriteRule ^/def/asgs/prop                             https://raw.githack.com/AGLDWG/asgs-ont/master/asgs-prop.ttl? [R=302,L]
 RewriteRule ^/def/asgs/prop(.*).ttl$                    https://raw.githack.com/AGLDWG/asgs-ont/master/asgs-prop.ttl [R=302,L]
-RewriteCond %{QUERY_STRING} ^_format=application/rdf\+xml$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=application/rdf\+xml$ [OR]
 RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
 RewriteRule ^/def/asgs                                  https://raw.githack.com/AGLDWG/asgs-ont/master/asgs.rdf? [R=302,L]
 RewriteRule ^/def/asgs(.*).rdf$                         https://raw.githack.com/AGLDWG/asgs-ont/master/asgs.rdf [R=302,L]
-RewriteCond %{QUERY_STRING} ^_format=application/ld\+json$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=application/ld\+json$ [OR]
 RewriteCond %{HTTP:Accept} application/ld\+json [NC]
 RewriteRule ^/def/asgs                                  https://raw.githack.com/AGLDWG/asgs-ont/master/asgs.jsonld? [R=302,L]
 RewriteRule ^/def/asgs(.*).jsonld$                      https://raw.githack.com/AGLDWG/asgs-ont/master/asgs.jsonld [R=302,L]
