--- a/conf/linked.data.gov.au/org/agldwg.conf
+++ b/conf/linked.data.gov.au/org/agldwg.conf
@@ -1,6 +1,6 @@
 # https://linked.data.gov.au/def/agop
 RewriteRule ^/def/agop/spec$			               https://raw.githack.com/AGLDWG/agop/master/specification.html [R=302,L]
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/agop$                                https://raw.githack.com/AGLDWG/agop/master/agop.ttl? [R=302,L]
 RewriteRule ^/def/agop.ttl$                            https://raw.githack.com/AGLDWG/agop/master/agop.ttl [R=302,L]
@@ -15,7 +15,7 @@ RewriteRule ^/def/agop/example.invalid-2$              https://raw.githack.com/A
 # https://linked.data.gov.au/def/dataset
 # all requests for RDF (turtle) just go to the whole borehole.ttl doc
 # Use of "($|/.*)" essential, as there is also /def/dataset-relationships elsewhere.
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/dataset($|/.*)                        https://raw.githack.com/AGLDWG/dataset-ont/master/dataset.ttl? [R=302,L]
 RewriteRule ^/def/dataset(|/.*).ttl$                    https://raw.githack.com/AGLDWG/dataset-ont/master/dataset.ttl [R=302,L]
@@ -23,7 +23,7 @@ RewriteRule ^/def/dataset($|(/.*))                      https://raw.githack.com/
 
 
 # https://linked.data.gov.au/def/datatype
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/datatype(.*)$                         https://raw.githack.com/AGLDWG/datatype-ont/master/rdf/datatype.ttl? [R=302,L]
 RewriteRule ^/def/datatype(.*).ttl$                     https://raw.githack.com/AGLDWG/datatype-ont/master/rdf/datatype.ttl [R=302,L]
@@ -42,7 +42,7 @@ RewriteRule ^/def/cn($|/(.*))                           https://agldwg.github.io
 
 
 # https://linked.data.gov.au/def/gnaf
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/gnaf(.*)$                             https://agldwg.github.io/gnaf-ont/gnaf.ttl? [R=302,L]
 RewriteRule ^/def/gnaf(.*).ttl$                         https://agldwg.github.io/gnaf-ont/gnaf.ttl [R=302,L]
@@ -50,7 +50,7 @@ RewriteRule ^/def/gnaf(.*)$                             https://agldwg.github.io
 
 
 # https://linked.data.gov.au/def/irg
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/irg(.*)$                              https://raw.githack.com/AGLDWG/iri-registry-ont/master/irg.ttl? [R=302,L]
 RewriteRule ^/def/irg(.*).ttl$                          https://raw.githack.com/AGLDWG/iri-registry-ont/master/irg.ttl$1 [R=302,L]
@@ -58,7 +58,7 @@ RewriteRule ^/def/irg(.*)$                              https://raw.githack.com/
 
 
 # https://linked.data.gov.au/def/iso19160-1-address-nz-profile
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$      https://raw.githack.com/AGLDWG/iso19160-1-address-ont-nz-profile/master/iso19160-1-nz-profile.ttl? [R=302,L]
 RewriteRule ^/def/iso19160-1-address-nz-profile(.*).ttl$  https://raw.githack.com/AGLDWG/iso19160-1-address-ont-nz-profile/master/iso19160-1-nz-profile.ttl [R=302,L]
@@ -66,7 +66,7 @@ RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$      https://raw.githack.co
 
 
 # https://linked.data.gov.au/def/iso19160-1-address
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/iso19160-1-address(.*)$                 https://raw.githack.com/AGLDWG/iso19160-1-address-ont/master/iso19160-1.ttl? [R=302,L]
 RewriteRule ^/def/iso19160-1-address(.*).ttl$             https://raw.githack.com/AGLDWG/iso19160-1-address-ont/master/iso19160-1.ttl [R=302,L]
@@ -75,7 +75,7 @@ RewriteRule ^/def/iso19160-1-address(.*)$                 https://raw.githack.co
 
 
 # https://linked.data.gov.au/def/lifecycle
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 ### Temporarily comment out header setting; as is, it applies to _every_ request! Need to make it properly conditional.
 ### Header set Content-Type text/turtle
