--- a/conf/linked.data.gov.au/org/ausbigg.conf
+++ b/conf/linked.data.gov.au/org/ausbigg.conf
@@ -7,7 +7,7 @@ RewriteRule ^/def/abis/validator$                       https://ausbigg.github.i
 RewriteRule ^/def/abis/context.json$                    https://ausbigg.github.io/abis/context.json [R=302,L]
 
 # Schema
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/abis$                                 https://ausbigg.github.io/abis/profile.ttl [R=302,L]
 RewriteRule ^/def/abis.ttl$                             https://ausbigg.github.io/abis/profile.ttl [R=302,L]
