--- a/conf/linked.data.gov.au/org/finance.conf
+++ b/conf/linked.data.gov.au/org/finance.conf
@@ -1,5 +1,5 @@
 # https://linked.data.gov.au/def/agrif
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/agrif(.*)$                            https://raw.githack.com/agldwg/agrif-ont/master/agrif.ttl? [R=302,L]
 RewriteRule ^/def/agrif(.*).ttl$                        https://raw.githack.com/agldwg/agrif-ont/master/agrif.ttl [R=302,L]
