--- a/conf/linked.data.gov.au/org/icsm.conf
+++ b/conf/linked.data.gov.au/org/icsm.conf
@@ -45,7 +45,7 @@ RewriteRule ^/def/csdm/surveyobs.ttl$ "https://icsm-au.github.io/3d-csdm/surveyo
 RewriteRule ^/def/csdm/surveyobs($|/.*)$ "https://icsm-au.github.io/3d-csdm/surveyobs.html$1" [R=302,NE,L]
 
 # https://linked.data.gov.au/def/anzgeodcat
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/anzgeodcat                https://kurrawong.github.io/anzgeodcat/profile/profile.ttl [R=302,L]
 RewriteRule ^/def/anzgeodcat.ttl$          https://kurrawong.github.io/anzgeodcat/profile/profile.ttl [R=302,L]
@@ -61,7 +61,7 @@ RewriteRule ^/def/anzgeodcat/sdo$			https://kurrawong.github.io/anzgeodcat/profi
 RewriteRule ^/def/anzgeodcat/sdo.ttl		https://kurrawong.github.io/anzgeodcat/profile/resources/mappings/sdo.ttl [R=302,L]
 
 # https://linked.data.gov.au/def/exem      
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/exem                https://kurrawong.github.io/exem-ont/exem.ttl [R=302,L]
 RewriteRule ^/def/exem.ttl$           https://kurrawong.github.io/exem-ont/exem.ttl [R=302,L]
