--- a/conf/linked.data.gov.au/org/naa.conf
+++ b/conf/linked.data.gov.au/org/naa.conf
@@ -1,13 +1,13 @@
 # https://linked.data.gov.au/def/crs-th
 # CRS Th - must occur before CRS ont else pattern clash
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/crs-th(.*)$                           https://raw.githubusercontent.com/CSIRO-enviro-informatics/crs-th/master/crs-th.ttl? [R=302,L]
 RewriteRule ^/def/crs-th(.*).ttl$                       https://raw.githubusercontent.com/CSIRO-enviro-informatics/crs-th/master/crs-th.ttl [R=302,L]
 RewriteRule ^/def/crs-th(.*)$                           https://github.com/CSIRO-enviro-informatics/crs-th [R=302,L]
 
 # https://linked.data.gov.au/def/crs
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/crs(.*)$                              https://raw.githack.com/CSIRO-enviro-informatics/crs-ont/master/schema/crs.ttl? [R=302,L]
 RewriteRule ^/def/crs(.*).ttl$                          https://raw.githack.com/CSIRO-enviro-informatics/crs-ont/master/schema/crs.ttl [R=302,L]
