--- a/conf/linked.data.gov.au/org/daff.conf
+++ b/conf/linked.data.gov.au/org/daff.conf
@@ -2,7 +2,7 @@
 # Dept Ag, Water & Environment's Plant Health Surveillance ontology
 RewriteRule ^/def/phs/voc(.*)$				http://dawe.surroundaustralia.com/object?uri=https://linked.data.gov.au/def/phs/voc$1 [QSA,L,R=302]
 
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/phs/profile               https://raw.githack.com/AGLDWG/phs-ont/master/profile.ttl [R=302,L]
 RewriteRule ^/def/phs/profile.ttl$          https://raw.githack.com/AGLDWG/phs-ont/master/profile.ttl [R=302,L]
