--- a/conf/linked.data.gov.au/org/gsq.conf
+++ b/conf/linked.data.gov.au/org/gsq.conf
@@ -1,21 +1,21 @@
 # https://linked.data.gov.au/dataset/qldgeofeatures
 # Dataset
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/dataset/qldgeofeatures$                        https://raw.githubusercontent.com/geological-survey-of-queensland/qldgeofeatures-dataset/master/_metadata/dcat_dataset.ttl? [R=302,L]
 RewriteRule ^/dataset/qldgeofeatures.ttl$                    https://raw.githubusercontent.com/geological-survey-of-queensland/qldgeofeatures-dataset/master/_metadata/dcat_dataset.ttl [R=302,L]
 RewriteRule ^/dataset/qldgeofeatures$                        https://github.com/geological-survey-of-queensland/qldgeofeatures-dataset [R=302,L]
 # Collections
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/qldgeofeatures/(.*)/$                  https://gsq.cat/qldgeofeatures/$1/?_format=text/turtle [R=302,L]
-RewriteRule ^/dataset/qldgeofeatures/(.*)/index.ttl$         https://gsq.cat/qldgeofeatures/$1/?_format=text/turtle [R=302,L]
+RewriteRule ^/dataset/qldgeofeatures/(.*)/$                  https://gsq.cat/qldgeofeatures/$1/?_mediatype=text/turtle [R=302,L]
+RewriteRule ^/dataset/qldgeofeatures/(.*)/index.ttl$         https://gsq.cat/qldgeofeatures/$1/?_mediatype=text/turtle [R=302,L]
 RewriteRule ^/dataset/qldgeofeatures/(.*)/$                  https://gsq.cat/qldgeofeatures/$1/ [R=302,L]
 # Individuals (Features)
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/qldgeofeatures/(.*)$                  https://gsq.cat/qldgeofeatures/feature/$1?_format=text/turtle [R=302,L]
-RewriteRule ^/dataset/qldgeofeatures/(.*).ttl$              https://gsq.cat/qldgeofeatures/feature/$1?_format=text/turtle [R=302,L]
+RewriteRule ^/dataset/qldgeofeatures/(.*)$                  https://gsq.cat/qldgeofeatures/feature/$1?_mediatype=text/turtle [R=302,L]
+RewriteRule ^/dataset/qldgeofeatures/(.*).ttl$              https://gsq.cat/qldgeofeatures/feature/$1?_mediatype=text/turtle [R=302,L]
 RewriteRule ^/dataset/qldgeofeatures/(.*)$                  https://gsq.cat/qldgeofeatures/feature/$1 [R=302,L]
 
 
@@ -686,7 +686,7 @@ RewriteRule ^/def/trs(.*)$ "https://vocabs.gsq.digital/object?vocab_id=trs&uri=h
 # Ontologies
 
 # https://linked.data.gov.au/def/borehole
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/borehole$                         https://raw.githack.com/geological-survey-of-queensland/gsq-borehole-profile/master/model/borehole.ttl? [R=302,L]
 RewriteRule ^/def/borehole.ttl$                     https://raw.githack.com/geological-survey-of-queensland/gsq-borehole-profile/master/model/borehole.ttl [R=302,L]
@@ -772,7 +772,7 @@ RewriteRule ^/def/geofeatures(.*)$                      https://raw.githack.com/
 
 
 # https://linked.data.gov.au/def/geoadminfeatures
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/geoadminfeatures                     https://raw.githack.com/geological-survey-of-queensland/geoadmin-features-ont/master/geoadminfeatures.ttl? [R=302,L]
 RewriteRule ^/def/geoadminfeatures.ttl$                https://raw.githack.com/geological-survey-of-queensland/geoadmin-features-ont/master/geoadminfeatures.ttll [R=302,L]
