--- a/conf/linked.data.gov.au/org/idn.conf
+++ b/conf/linked.data.gov.au/org/idn.conf
@@ -11,7 +11,7 @@ RewriteRule ^/def/idncp/repo                https://github.com/idn-au/idn-catalo
 
 
 # https://linked.data.gov.au/def/idn-role-codes
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/idn-role-codes(.*)$                  https://idn-au.github.io/idn-role-codes-voc/idn-role-codes.ttl [R=302,L]
 RewriteRule ^/def/idn-role-codes(.*).ttl$              https://idn-au.github.io/idn-role-codes-voc/idn-role-codes.ttl [R=302,L]
@@ -19,7 +19,7 @@ RewriteRule ^/def/idn-role-codes(.*)$                  https://idn-au.github.io/
 
 
 # https://linked.data.gov.au/def/tk-labels
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/tk-labels(.*)$                  https://idn-au.github.io/lc-vocs/tk-labels.ttl [R=302,L]
 RewriteRule ^/def/tk-labels(.*).ttl$              https://idn-au.github.io/lc-vocs/tk-labels.ttl [R=302,L]
@@ -27,7 +27,7 @@ RewriteRule ^/def/tk-labels(.*)$                  https://idn-au.github.io/lc-vo
 
 
 # https://linked.data.gov.au/def/bc-labels
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/bc-labels(.*)$                  https://idn-au.github.io/lc-vocs/bc-labels.ttl [R=302,L]
 RewriteRule ^/def/bc-labels(.*).ttl$              https://idn-au.github.io/lc-vocs/bc-labels.ttl [R=302,L]
@@ -35,7 +35,7 @@ RewriteRule ^/def/bc-labels(.*)$                  https://idn-au.github.io/lc-vo
 
 
 # https://linked.data.gov.au/def/care
-RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/care(.*)$                  https://idn-au.github.io/care-voc/care.ttl [R=302,L]
 RewriteRule ^/def/care(.*).ttl$              https://idn-au.github.io/care-voc/care.ttl [R=302,L]
