many small fixes

--- a/conf/linked.data.gov.au/org/gsq.conf
+++ b/conf/linked.data.gov.au/org/gsq.conf
@@ -137,8 +137,8 @@ RewriteRule ^/def/depth-reference(.*)$ "https://vocabs.gsq.digital/object?vocab_
 # https://linked.data.gov.au/def/earth-science-data-category
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/earth-science-data-category(.*)$ "https://vocabs.gsq.digital/object?vocab_id=earth-science-data-category&uri=http://linked.data.gov.au/def/earth-science-data-category$1&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/earth-science-data-category(.*)$ "https://vocabs.gsq.digital/object?vocab_id=earth-science-data-category&uri=http://linked.data.gov.au/def/earth-science-data-category$1" [R=302,NE,L]
+RewriteRule ^/def/earth-science-data-category(.*)$ "https://vocabs.gsq.digital/object?uri=http://linked.data.gov.au/def/earth-science-data-category$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/earth-science-data-category(.*)$ "https://vocabs.gsq.digital/object?uri=http://linked.data.gov.au/def/earth-science-data-category$1" [R=302,NE,L]
 
 
 # https://linked.data.gov.au/def/geoadminfeatures
