--- a/conf/linked.data.gov.au/org/ga.conf
+++ b/conf/linked.data.gov.au/org/ga.conf
@@ -228,14 +228,6 @@ RewriteRule ^/def/fsdf/network/?(.*)$                          https://raw.githa
 # https://linked.data.gov.au/def/fsdf-supermodel
 RewriteRule /def/fsdf-supermodel(.*)            https://geoscienceaustralia.github.io/fsdf-supermodel/supermodel.html$1 [R=302,L]
 
-# https://linked.data.gov.au/def/fsdf
-RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/fsdf/?(.*)$                                  https://github.com/GeoscienceAustralia/FSDF-KG/blob/master/edg/ontologies/fsdf.ttl [R=302,L]
-RewriteRule ^/def/fsdf/?(.*).ttl$                              https://github.com/GeoscienceAustralia/FSDF-KG/blob/master/edg/ontologies/fsdf.ttl [R=302,L]
-RewriteRule ^/def/fsdf/?(.*)$                                  https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/docs/fsdf.html#$1 [R=302,L,NE]
-
-
 # https://linked.data.gov.au/def/fsdf-backbone
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
@@ -256,6 +248,14 @@ RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/fsdf/(ground-relations|observable-properties|operational-statuses|themes/buildings-and-settlements-cs|themes/physical-infrastructure-cs|themes/surface-hydrology-cs|ownership/)(.*)$                           "https://linked.fsdf.org.au/vocab/$1$2?_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/def/fsdf/(ground-relations|observable-properties|operational-statuses|themes/buildings-and-settlements-cs|themes/physical-infrastructure-cs|themes/surface-hydrology-cs|ownership/)(.*).ttl$                       "https://linked.fsdf.org.au/vocab/$1$2?_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/def/fsdf/(ground-relations|observable-properties|operational-statuses|themes/buildings-and-settlements-cs|themes/physical-infrastructure-cs|themes/surface-hydrology-cs|ownership/)(.*)$                           https://linked.fsdf.org.au/vocab/$1$2 [R=302,L]
+
+
+# https://linked.data.gov.au/def/fsdf
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/fsdf/?(.*)$                                  https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/rdf/ontologies/fsdf.ttl [R=302,L]
+RewriteRule ^/def/fsdf/?(.*).ttl$                              https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/rdf/ontologies/fsdf.ttl [R=302,L]
+RewriteRule ^/def/fsdf/?(.*)$                                  https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/docs/fsdf.html#$1 [R=302,L,NE]
 
 
 # GA's VocPub Profile
