updating all fixed patterns

--- a/conf/linked.data.gov.au/org/ga.conf
+++ b/conf/linked.data.gov.au/org/ga.conf
@@ -136,27 +136,45 @@ RewriteRule ^/dataset/gnaf/code/(.+)$                  https://linked.fsdf.org.a
 # Dataset
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/gnaf$                            "http://gnaf.linked.fsdf.org.au/dataset/gnaf?_profile=dcat&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/dataset/gnaf.ttl$                        "http://gnaf.linked.fsdf.org.au/dataset/gnaf?_profile=dcat&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf$                            "https://gnaf.linked.fsdf.org.au/dataset/gnaf?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf.ttl$                        "https://gnaf.linked.fsdf.org.au/dataset/gnaf?_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/dataset/gnaf$                            https://gnaf.linked.fsdf.org.au/dataset/gnaf [R=302,L]
-# Address, Address Site, Locality, Street Locality Feature Collections
+# Address Feature Collection
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/gnaf/address$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/addresses?_profile=geo&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/dataset/gnaf/address.ttl$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/addresses?_profile=geo&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf/address$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/addresses?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf/address.ttl$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/addresses?_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/dataset/gnaf/address$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/addresses" [R=302,L]
-RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1?_profile=geo&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality).ttl$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1?_profile=geo&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1" [R=302,L]
-# Address, Address Site, Locality, Street Locality Features
+# Address Register
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/gnaf/(address)/(.*)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1es/items/$2?_profile=geo&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/dataset/gnaf/(address)/(.*).ttl$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1es/items/$2?_profile=geo&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/dataset/gnaf/(address)/(.*)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1es/items/$2" [R=302,L]
-RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality)/(.*)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1/items/$2?_profile=geo&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality)/(.*).ttl$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1/items/$2?_profile=geo&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality)/(.*)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1/items/$2" [R=302,L]
+RewriteRule ^/dataset/gnaf/address/$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/addresses/items?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf/address/index.ttl$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/addresses/items?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf/address/$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/addresses/items" [R=302,L]
+# Address Site, Locality, Street Locality Feature Collections
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/dataset/gnaf/(addressSite|locality|streetLocality)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf/(addressSite|locality|streetLocality).ttl$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf/(addressSite|locality|streetLocality)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1" [R=302,L]
+# Address Site, Locality, Street Locality Registers
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/dataset/gnaf/(addressSite|locality|streetLocality)/$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1/items?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf/(addressSite|locality|streetLocality)/index.ttl$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1/items?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf/(addressSite|locality|streetLocality)/$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1/items" [R=302,L]
+# Address Features
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/dataset/gnaf/address/(.+)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/addresses/items/$1?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf/address/(.+).ttl$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/addresses/items/$1?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf/address/(.+)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/addresses/items/$1" [R=302,L]
+# Address Site, Locality, Street Locality Features
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/dataset/gnaf/(addressSite|locality|streetLocality)/(.+)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1/items/$2?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf/(addressSite|locality|streetLocality)/(.+).ttl$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1/items/$2?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/gnaf/(addressSite|locality|streetLocality)/(.+)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1/items/$2" [R=302,L]
 
 
 # https://linked.data.gov.au/dataset/geofabric
@@ -169,14 +187,14 @@ RewriteRule ^/dataset/geofabric$                            https://geofabric.li
 # Drainage Division, River Region & Catchment Feature Collections
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/geofabric/(drainagedivisions|riverregions|catchments)$ "https://geofabric.linked.fsdf.org.au/dataset/geofabric/collections/$1?_profile=geo&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/dataset/geofabric/(drainagedivisions|riverregions|catchments).ttl$ "https://geofabric.linked.fsdf.org.au/dataset/geofabric/collections/$1?_profile=geo&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/geofabric/(drainagedivisions|riverregions|catchments)$ "https://geofabric.linked.fsdf.org.au/dataset/geofabric/collections/$1?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/geofabric/(drainagedivisions|riverregions|catchments).ttl$ "https://geofabric.linked.fsdf.org.au/dataset/geofabric/collections/$1?_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/dataset/geofabric/(drainagedivisions|riverregions|catchments)$ "https://geofabric.linked.fsdf.org.au/dataset/geofabric/collections/$1" [R=302,L]
 # Drainage Division, River Region & Catchement
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/geofabric/hydroid/(.*)$ "https://geofabric.linked.fsdf.org.au/object?uri=https://%{HTTP_HOST}%{REQUEST_URI}&_profile=geo&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/dataset/geofabric/hydroid/(.*).ttl$ "https://geofabric.linked.fsdf.org.au/object?uri=https://%{HTTP_HOST}%{REQUEST_URI}&_profile=geo&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/geofabric/hydroid/(.*)$ "https://geofabric.linked.fsdf.org.au/object?uri=https://%{HTTP_HOST}%{REQUEST_URI}&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/dataset/geofabric/hydroid/(.*).ttl$ "https://geofabric.linked.fsdf.org.au/object?uri=https://%{HTTP_HOST}/dataset/geofabric/hydroid/$1&_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/dataset/geofabric/hydroid/(.*)$ "https://geofabric.linked.fsdf.org.au/object?uri=https://%{HTTP_HOST}%{REQUEST_URI}" [R=302,L]
 
 
@@ -253,9 +271,9 @@ RewriteRule ^/def/fsdf/(ground-relations|observable-properties|operational-statu
 # https://linked.data.gov.au/def/fsdf
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/fsdf/?(.*)$                                  https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/rdf/ontologies/fsdf.ttl [R=302,L]
-RewriteRule ^/def/fsdf/?(.*).ttl$                              https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/rdf/ontologies/fsdf.ttl [R=302,L]
-RewriteRule ^/def/fsdf/?(.*)$                                  https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/docs/fsdf.html#$1 [R=302,L,NE]
+RewriteRule ^/def/fsdf/?(.*)$                                  https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/rdf/ontologies/fsdf.ttl? [R=302,L]
+RewriteRule ^/def/fsdf/?(.*).ttl$                              https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/rdf/ontologies/fsdf.ttl? [R=302,L]
+RewriteRule ^/def/fsdf/?(.*)$                                  https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/docs/fsdf.html#$1? [R=302,L,NE]
 
 
 # GA's VocPub Profile
