--- a/conf/linked.data.gov.au/org/csiro.conf
+++ b/conf/linked.data.gov.au/org/csiro.conf
@@ -86,9 +86,9 @@ RewriteRule ^/def/gba(.*)$                              http://registry.it.csiro
 # https://linked.data.gov.au/def/geofabric
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/geofabric                             https://csiro-enviro-informatics.github.io/geofabric-ont/geofabric.ttl [R=302,L]
-RewriteRule ^/def/geofabric.ttl$                        https://csiro-enviro-informatics.github.io/geofabric-ont/geofabric.ttl [R=302,L]
-RewriteRule ^/def/geofabric$                            https://csiro-enviro-informatics.github.io/geofabric-ont/geofabric.html$1 [R=302,L]
+RewriteRule ^/def/geofabric$                             https://csiro-enviro-informatics.github.io/geofabric-ont/geofabric.ttl? [R=302,L]
+RewriteRule ^/def/geofabric.ttl$                        https://csiro-enviro-informatics.github.io/geofabric-ont/geofabric.ttl? [R=302,L]
+RewriteRule ^/def/geofabric$                            https://csiro-enviro-informatics.github.io/geofabric-ont/geofabric.html$1? [R=302,L]
 RewriteRule ^/def/geofabric/(.*)                        https://csiro-enviro-informatics.github.io/geofabric-ont/geofabric.html\#$1 [R=302,L,NE]
 
 
