--- a/conf/linked.data.gov.au/org/gsq.conf
+++ b/conf/linked.data.gov.au/org/gsq.conf
@@ -777,3 +777,8 @@ RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/geoadminfeatures                     https://raw.githack.com/geological-survey-of-queensland/geoadmin-features-ont/master/geoadminfeatures.ttl? [R=302,L]
 RewriteRule ^/def/geoadminfeatures.ttl$                https://raw.githack.com/geological-survey-of-queensland/geoadmin-features-ont/master/geoadminfeatures.ttll [R=302,L]
 RewriteRule ^/def/geoadminfeatures(.*)$                https://raw.githack.com/geological-survey-of-queensland/geoadmin-features-ont/master/geoadminfeatures.html$1 [R=302,L]
+
+# https://linked.data.gov.au/def/geochem
+RewriteRule ^/def/geochem$				https://kurrawong.github.io/gsq-geochem-spec/spec.html [R=302,L]
+RewriteRule ^/def/geochem/spec$                         https://kurrawong.github.io/gsq-geochem-spec/spec.html [R=302,L]
+RewriteRule ^/def/geochem/overview$                     https://kurrawong.github.io/gsq-geochem-spec/overview.html [R=302,L]
