--- a/conf/lab.environment.data.gov.au.conf
+++ b/conf/lab.environment.data.gov.au.conf
@@ -1,24 +1,10 @@
+# Legacy persistent domain
 <VirtualHost *:80>
-        ServerName lab.environment.data.gov.au
-
-        ErrorLog ${APACHE_LOG_DIR}/lab.environment.data.gov.au/error.log
-        LogLevel alert rewrite:trace8
-        CustomLog ${APACHE_LOG_DIR}/lab.environment.data.gov.au/access.log combined
-
-        Options Includes FollowSymLinks MultiViews
-
-	# RewriteRule ^/robots.txt /var/www/html/robots.txt [L]
+    ServerName lab.environment.data.gov.au
 
 	RewriteEngine on
+
 	# tombstoned
     RewriteRule (.*) https://linked.data.gov.au/static/lab.environment.data.gov.au.html [L,R=302]
-        #<Location />
-        #        ProxyPass http://130.56.251.47/ keepalive=On
-        #        ProxyPassReverse http://130.56.251.47/
-	    #
-        #        SetOutputFilter INFLATE;proxy-html;DEFLATE
-        #        ProxyHTMLURLMap css/ http://130.56.251.47/css/
-        #        ProxyHTMLURLMap images/ http://130.56.251.47/images/
-        #</Location>
 </VirtualHost>
 
