install script updates

--- a/conf/linked.data.gov.au/regs.conf
+++ b/conf/linked.data.gov.au/regs.conf
@@ -1,4 +1,4 @@
-#	Overall Dataset & Register Defintions
+#	Overall Dataset & Register Definitions
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/$                                         https://raw.githack.com/AGLDWG/website/master/files/root.ttl [R=302,L]
