--- a/conf/www.linked.data.gov.au.conf
+++ b/conf/www.linked.data.gov.au.conf
@@ -4,7 +4,7 @@
 #
 # Copy 'n paste from previous PID Proxy server Apache file. Nick Car, 13/08/2018
 #
-<VirtualHost *>
+<VirtualHost *:80>
         ServerName www.linked.data.gov.au
         LogLevel warn rewrite:trace3
         ErrorLog ${APACHE_LOG_DIR}/linked.data.gov.au/error.log
