GSWA pattern & test

--- a/conf/linked.data.gov.au/org/gswa.conf
+++ b/conf/linked.data.gov.au/org/gswa.conf
@@ -1,2 +1,2 @@
 # https://linked.data.gov.au/def/borehole-configuration
-RewriteRule ^/def/borehole-configuration$ https://gswa.dev.kurrawong.ai/v/vocab/ns3:borehole-configuration [QSA,L,R=302]
+RewriteRule ^/def/borehole-configuration$ https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration [QSA,L,R=302]
